# rsync-gui

./: README.md  meson.build
src/: main.c  progress_window.c  progress_window.h  rsync-gtk.gresource.xml  window.c  window.h  window.ui
